# CounterStrikeSharp

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  ACKNOWLEDGEMENTS  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  Dockerfile  GitVersion.yml  INSTALL.md  LICENSE  LICENSE.MIT  README.md  cliff.toml  create-release.sh
.devcontainer/: devcontainer.json
.devcontainer/linux/: devcontainer.json
.github/: FUNDING.yml  dependabot.yaml
.github/workflows/: actionlint.yaml  build-and-publish.yml  build.yml  bump-hl2sdk.yml  ci.yaml  cmake-single-platform.yml  discord-notify.yml  gcc-cmake.yml  issues-needs-author-action.yml  issues-remove-needs-author-action.yml  issues-stale.yml  issues-triage-new.yml  issues-triage-removal.yml  lint-code.yaml  manually.yml  msvc-cmake.yml  pr-auto-approve-dependabot.yaml  pr-check-managed.yml  pr-checks.yml  pr-closed.yml  publish-docs.yml  sync-schema.yaml  sync.yml  win32-test.yml
configs/: admins.json  counterstrikesharp.vdf  gamedata.json  schema_enums.txt
docfx/: 404.html  404.md  docfx.json  filterConfig.yml  index.md  toc.yml
docfx/docs/: toc.yml
docfx/examples/: HelloWorld.md  WarcraftPlugin.md  WithClientMessages.md  WithCommands.md  WithConfig.md  WithDatabase.md  WithDependencyInjection.md  WithEntityOutputHooks.md  WithFakeConvars.md  WithGameEventHandlers.md  WithSharedTypes.md  WithTranslations.md  WithUserMessages.md  WithVirtualFunctions.md  WithVoiceOverrides.md  toc.yml
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
eng/: run-benchmarks.ts  test-gamedata-signatures.py  update-schema.sh  update-schema.ts
eng/formatting/: download-tools.ps1  download-tools.sh  format.sh
eng/install/: install.ps1  install.sh
examples/HelloWorld/: HelloWorldPlugin.cs  README.md
examples/WarcraftPlugin/: Database.cs  EventSystem.cs  WarcraftPlugin.cs  WarcraftPlugin.csproj
examples/WithCheckTransmit/: README.md  WithCheckTransmit.csproj  WithCheckTransmitPlugin.cs
examples/WithClientMessages/: README.md  WithClientMessagesPlugin.cs
examples/WithCommands/: README.md  WithCommandsPlugin.cs
examples/WithConfig/: README.md  WithConfig.csproj  WithConfigPlugin.cs  WithConfigPluginServiceCollection.cs
examples/WithDatabaseDapper/: README.md  WithDatabaseDapper.csproj  WithDatabaseDapperPlugin.cs
examples/WithDependencyInjection/: README.md  WithDependencyInjectionPlugin.cs
examples/WithEntityOutputHooks/: README.md  WithEntityOutputHooks.csproj  WithEntityOutputHooksPlugin.cs
examples/WithFakeConvars/: ConVars.cs  EvenNumberValidator.cs  README.md  WithFakeConvars.csproj  WithFakeConvarsPlugin.cs
examples/WithGameEventHandlers/: README.md  WithGameEventHandlersPlugin.cs
examples/WithSharedTypes/: BalanceHandler.cs  BalanceService.cs  README.md  WithSharedTypes.csproj  WithSharedTypesPlugin.cs
examples/WithSharedTypesConsumer/: README.md  WithSharedTypesConsumer.csproj  WithSharedTypesConsumerPlugin.cs
examples/WithTranslations/: README.md  WithTranslations.csproj  WithTranslationsPlugin.cs
examples/WithUserMessages/: README.md  WithUserMessages.csproj  WithUserMessagesPlugin.cs
examples/WithVirtualFunctions/: WithVirtualFunctions.csproj  WithVirtualFunctionsPlugin.cs
examples/WithVoiceOverrides/: README.md  WithVoiceOverrides.csproj  WithVoiceOverridesPlugin.cs
libraries/dotnet/: coreclr_delegates.h  hostfxr.h
libraries/httplib/: httplib.h
makefiles/: linux.base.cmake  protobuf.cmake  shared.cmake  windows.base.cmake
makefiles/metamod/: configure_metamod.cmake  counterstrikesharp.vdf.in
managed/: .editorconfig  CounterStrikeSharp.sln
managed/CounterStrikeSharp.API/: Api.cs  BaseNative.cs  Bootstrap.cs  CompatibilitySuppressions.xml  ConVarFlags.cs  CounterStrikeSharp.API.csproj  GlobalUsings.cs  Guard.cs  Marshaling.cs  NativeEntity.cs  NativeHandleTracker.cs  PlayerButtons.cs  PlayerValuesManager.cs  Players.cs  Server.cs  ServiceCollectionExtensions.cs  StringExtensions.cs  StringTables.cs  Utilities.cs  VoiceFlags.cs
managed/CounterStrikeSharp.API.Tests/: AdminTests.cs  CounterStrikeSharp.API.Tests.csproj  SteamIDTests.cs  TestUtils.cs  TranslationTests.cs
managed/CounterStrikeSharp.SchemaGen/: CounterStrikeSharp.SchemaGen.csproj  NetworkClasses.cs  NewSchemaModule.cs  Program.cs  SchemaAtomicCategory.cs  SchemaClass.cs  SchemaEnum.cs  SchemaEnumItem.cs  SchemaExtensions.cs  SchemaField.cs  SchemaFieldType.cs  SchemaModule.cs  SchemaTypeCategory.cs
managed/CounterStrikeSharp.Tests.Native/: CommandTests.cs  ConVarTests.cs  ConsoleTestReporterSink.cs  EngineTests.cs  EntityIOTests.cs  EntityKeyValuesTests.cs  EntityTests.cs  FrameSchedulingTests.cs  GameEventTests.cs  GameTests.cs  GlobalUsings.cs  ListenerTests.cs  NativeObjectTests.cs  NativeTestsPlugin.cs  NativeTestsPlugin.csproj  README.md  RayTraceTests.cs  SchemaPropertyTests.cs  SchemaTests.cs  ScriptContextBenchmarks.cs  TestUtils.cs  TimerTests.cs  UserMessageTests.cs  VirtualFunctionTests.cs
managed/TestPlugin/: README.md  TestPlugin.cs  TestPlugin.csproj  TestPluginServiceCollection.cs
src/: mm_plugin.cpp  mm_plugin.h  sample_mm.cpp  sample_mm.h
src/core/: ClientMessage.cpp  ClientMessage.h  UserMessage.cpp  UserMessage.h  UserMessageScaffolder.h  addresses.cpp  addresses.h  coreconfig.cpp  coreconfig.h  detours.h  emitsound_t.h  engine_trace.cpp  engine_trace.h  function.cpp  function.h  game_system.cpp  game_system.h  gameconfig.cpp  gameconfig.h  gameconfig_updater.cpp  gameconfig_updater.h  global_listener.h  globals.cpp  globals.h  log.cpp  log.h  memory.cpp  memory.h  memory_module.cpp  memory_module.h  mempatch.cpp  mempatch.h  recipientfilter.h  recipientfilters.h  tick_scheduler.cpp  tick_scheduler.h  timer_system.cpp  timer_system.h  utils.h
src/protobuf/: compile.sh
src/scripting/: autonative.h  callback_manager.cpp  callback_manager.h  dotnet_host.cpp  dotnet_host.h  script_engine.cpp  script_engine.h
src/utils/: plat.h  plat_unix.cpp  plat_win.cpp  string.h  virtual.h
tooling/CodeGen.Natives/: CodeGen.Natives.csproj  Helpers.cs  Mapping.cs  (+2 more)
(+1596 files in other folders)
